Refactor code to remove warnings and improve null handling (#82)
* Removing some warnings

* Refactor code to eliminate warnings and improve null handling in various classes

* Some more warning removals

* MOre nullable things

* Refactor EventScraper to improve null checks and enhance code readability